--- a/css/app.css
+++ b/css/app.css
@@ -2,12 +2,18 @@ body{
     font-family: 'Lato', sans-serif;
     background-color: #ddd;
     font-size: 16px;
+    box-sizing: border-box;
 }
 a{
     text-decoration: none;
 }
 a, a:visited{
     color: inherit;
+}
+.cart{
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    margin-bottom: 100px;
 }
 .clear{
     clear: both;
@@ -68,15 +74,14 @@ strong{
 .presentation .credentials h2{
     margin: 30px 0;
 }
-.cart{
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0,0,0,0.4);
-    margin-bottom: 100px;
-}
+
 .career{
-    padding: 20px;
+    padding: 40px 40px 0 40px;
     position: relative;
 
+}
+.skill{
+    padding: 40px 40px 20px 40px;
 }
 .career:before{
     font-family: 'Jura', sans-serif;
@@ -100,7 +105,8 @@ strong{
     float: left;
     margin-right: 20px;
     font-weight: 700;
-    min-height: 50px;
+    min-height: 60px;
+    width: 120px;
 }
 .cart-bloc{
     margin-bottom: 20px;
@@ -109,11 +115,33 @@ strong{
     margin-bottom: 5px;
 }
 .cart-bloc li{
-    margin-left: 120px;
+    margin-left: 170px;
     list-style-type: disc;
 }
+.date::after{
+    content: ":";
+    margin-left: 2px;
+}
+.col-3{
+    width: 33.333%;
+    float: left;
+}
+.techno{
+    font-weight: 700;
+    margin-right: 5px;
+    width: 90px;
+    display: inline-block;
+}
+.star{
+    margin-right: 2px;
+}
+.star-on{
+    color: #183b51;
+}
+.star-off{
+    color: #ddd;
 
-
+}
 
 @media screen and (max-width: 1100px) {
     header{
