--- a/css/app.css
+++ b/css/app.css
@@ -73,7 +73,7 @@ strong{
     margin-left: 20px;
 }
 #content{
-    width: 50%;
+    width: 70%;
     margin: -150px auto 0 auto;
 }
 .presentation img{
@@ -98,8 +98,11 @@ strong{
     position: relative;
 
 }
+.cart-bloc{
+    margin-bottom: 30px;
+}
 .skill{
-    padding: 40px 40px 20px 40px;
+    /*padding: 40px 40px 20px 40px;*/
 }
 /*.career:before{*/
 /*    font-family: 'Jura', sans-serif;*/
@@ -116,8 +119,16 @@ strong{
     font-size: 30px;
     font-weight: 700;
     color: #183b51;
+}
+.career h2.title-outside{
     top: -50px;
     left: -50px;
+    transition: 0.5s;
+}
+.career h2.title-inside{
+    top: 0;
+    left: 5px;
+    transition: 0.5s;
 }
 /*.experience:before{*/
 /*    content: "Expériences";*/
@@ -213,6 +224,11 @@ label{
     background-color: #183b51;
 }
 @media screen and (max-width: 1100px) {
+    .career h2.title-outside{
+        top: -50px;
+        left: -5px;
+        transition: 0.5s;
+    }
     header{
         text-align: center;
         padding: 10px 10px;
@@ -225,7 +241,7 @@ label{
         float: none;
     }
     #content{
-        width: 50%;
+        width: 90%;
         margin: -250px auto 0 auto;
     }
     .presentation{
